# minions

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  PLUGIN.md  README.md  install.sh  pyproject.toml  requirements.txt  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: minion-bananas.md  minion-fix.md  minion-huddle.md  minion-queue.md  minion-setup.md  minion-swarm.md
docs/: BACKLOG.md  INTEGRATION.md  PRODUCT_STRATEGY.md  PRODUCT_VISION.md  SEARCH_REPLACE.md  SWOT_ANALYSIS.md  TASK_QUEUE.md  VISION.md
docs/milestones/: M0-ollama-setup.md  M1-orchestrator.md  M2-read-tools.md  M3-patch-generation.md
docs/plans/: 2025-01-12-metrics-design.md  2026-01-12-generate-validate-design.md  2026-01-12-minion-polish-sweep-design.md
llm_gc/: __init__.py  bananas.py  bootstrap.py  cache.py  handoff.py  judge.py  linter.py  logging.py  metrics.py  model_router.py  ollama.py  patcher.py  repomap.py  safety.py  setup.py  skill.py  swarm.py  task_queue.py  types.py  validator.py
llm_gc/config/: __init__.py  models.yaml
llm_gc/orchestrator/: base.py  m1_chat.py  m3_patch.py
llm_gc/parsers/: __init__.py  code_blocks.py
llm_gc/tools/: __init__.py  diff_generator.py  file_reader.py  (+5 more)
scripts/: bananas.py  check.py  m1_chat.py  m3_patch.py  m_polish.py  m_sweep.py  metrics.py  minions.py  swarm.py  task_queue.py  verify_setup.py
tests/: __init__.py  test_bootstrap.py  test_m4_tools.py  test_m5_judge.py  test_metrics.py  test_model_router.py  test_new_modules.py  test_swarm.py  test_validation.py
(+11 files in other folders)
